--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLAY\n",
+      "FILLING\n",
+      "BAR\n",
+      "THEATRE\n",
+      "EASYGOING\n",
+      "DATE\n",
+      "LEAD\n",
+      "THAT\n",
+      "STORY\n",
+      "ISLAND\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "for word in words:\n",
+    "    print(word.upper())"
    ]
   },
   {
@@ -41,11 +59,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['filling', 'theatre', 'easygoing', 'story', 'island']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "new_list = []\n",
+    "for word in words:\n",
+    "    if len(word) > 4:\n",
+    "        new_list.append(word)\n",
+    "\n",
+    "print(new_list)"
    ]
   },
   {
@@ -57,12 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theatre\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "for word in words:\n",
+    "    if word[0] == 't':\n",
+    "        print(word)\n",
+    "        break"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -228,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -285,11 +332,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
   }
  },
  "nbformat": 4,
