--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
     "    if len(word) > 4:\n",
     "        new_list.append(word)\n",
     "\n",
-    "print(new_list)"
+    "print(new_list)\n"
    ]
   },
   {
@@ -127,11 +127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "list = []\n",
+    "for number in range(1,10):\n",
+    "    list.append(number ** 2)\n",
+    "\n",
+    "print(list)\n"
    ]
   },
   {
@@ -143,11 +155,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 9, 25, 49, 81]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "list = []\n",
+    "for number in range(1,10, 2):\n",
+    "    list.append(number ** 2)\n",
+    "\n",
+    "print(list)"
    ]
   },
   {
@@ -159,11 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[64, 256, 576, 1024, 1600, 2304, 3136, 4096, 5184, 6400, 7744, 9216, 10816, 12544, 14400, 16384, 18496, 20736, 23104, 25600, 28224, 30976, 33856, 36864, 40000, 43264, 46656, 50176, 53824, 57600, 61504, 65536, 69696, 73984, 78400, 82944, 87616, 92416, 97344, 102400, 107584, 112896, 118336, 123904, 129600, 135424, 141376, 147456, 153664, 160000, 166464, 173056, 179776, 186624, 193600, 200704, 207936, 215296, 222784, 230400, 238144, 246016, 254016, 262144, 270400, 278784, 287296, 295936, 304704, 313600, 322624, 331776, 341056, 350464, 360000, 369664, 379456, 389376, 399424, 409600, 419904, 430336, 440896, 451584, 462400, 473344, 484416, 495616, 506944, 518400, 529984, 541696, 553536, 565504, 577600, 589824, 602176, 614656, 627264, 640000, 652864, 665856, 678976, 692224, 705600, 719104, 732736, 746496, 760384, 774400, 788544, 802816, 817216, 831744, 846400, 861184, 876096, 891136, 906304, 921600, 937024, 952576, 968256, 984064]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "list = []\n",
+    "for number in range(1,1000):\n",
+    "    if number % 8 == 0:\n",
+    "        list.append(number ** 2)\n",
+    "\n",
+    "print(list)"
    ]
   },
   {
@@ -175,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,9 +256,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(f\"There are {len(people)} people\")"
    ]
   },
   {
@@ -233,12 +281,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 people have kids\n"
+     ]
+    }
+   ],
+   "source": [
+    "x= 0\n",
+    "for person in people:\n",
+    "    if person[\"n_kids\"] >= 1:\n",
+    "        x += 1\n",
+    "print(f\"{x} people have kids\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -249,11 +316,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "They have 10 kids in total\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "x= 0\n",
+    "for person in people:\n",
+    "        x += person[\"n_kids\"]\n",
+    "print(f\"They have {x} kids in total\")"
    ]
   },
   {
@@ -265,11 +343,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Juan', 'age': 34, 'n_kids': 2},\n",
+       " {'name': 'Pepe', 'age': 27, 'n_kids': 0},\n",
+       " {'name': 'Sonia', 'age': 41, 'n_kids': 3},\n",
+       " {'name': 'Lucía', 'age': 22, 'n_kids': 4},\n",
+       " {'name': 'Leo', 'age': 55, 'n_kids': 5}]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "people_new = people.copy()\n",
+    "\n",
+    "for person in people_new:\n",
+    "    for key, value in person.items():\n",
+    "        if key == \"name\" and value[-1] == \"a\":\n",
+    "            person[\"n_kids\"] += 1\n",
+    "\n",
+    "people_new       \n",
+    "    \n",
+    "                                "
    ]
   }
  ],
